force-app/main/default/objects/RICOViolation__c/RICOViolation__c.object-meta.xml
<CustomObject>
    <label>RICO / Violation &amp; Allegation</label>
    <nameField>
        <displayFormat>VA-{00000}</displayFormat>
        <label>Violation / Allegation   Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RICO / Violations &amp; Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>