force-app/main/default/objects/RICOViolation__c/fields/Allegation__c.field-meta.xml
<CustomField>
    <fullName>Allegation__c</fullName>
    <inlineHelpText>The Allegation. Only REB Allegations are available int this picklist field. If you do not see the Allegation here, then type in the Allegation in the Allegation Text field below.</inlineHelpText>
    <label>Allegation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>DUIs/ Convictions</fullName>
            </value>
            <value>
                <fullName>Failure to comply with statutory responsibilities</fullName>
            </value>
            <value>
                <fullName>Failure to comply with statutory responsibilities as principal broker</fullName>
            </value>
            <value>
                <fullName>Failure to Renew License/Practicing without a License</fullName>
            </value>
            <value>
                <fullName>Failure to report</fullName>
            </value>
            <value>
                <fullName>Failure to report any disciplinary action against licensee</fullName>
            </value>
            <value>
                <fullName>Failure to report changes within 10 days</fullName>
            </value>
            <value>
                <fullName>Failure to report DUI/Convictions</fullName>
            </value>
            <value>
                <fullName>False Statement</fullName>
            </value>
            <value>
                <fullName>Procuring a license through fraud, misrepresentation, or deceit</fullName>
            </value>
            <value>
                <fullName>Unlicensed Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>