force-app/main/default/objects/RICOViolation__c/fields/AllegationFormula__c.field-meta.xml
<CustomField>
    <fullName>AllegationFormula__c</fullName>
    <formula>IF(
    NOT(
        ISBLANK( TEXT(Allegation__c) )
        ),  TEXT(Allegation__c),  AllegationText__c 
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allegation Formula</label>
    <type>Text</type>
</CustomField>