force-app/main/default/objects/RICOViolation__c/fields/AllegationText__c.field-meta.xml
<CustomField>
    <fullName>AllegationText__c</fullName>
    <inlineHelpText>Use this text field if the Allegation is not listed in the Allegation picklist field above. This text field is used for all areas of PVL except REB.</inlineHelpText>
    <label>Allegation Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>