force-app/main/default/objects/RICOViolation__c/fields/RICOReferral__c.field-meta.xml
<CustomField>
    <fullName>RICOReferral__c</fullName>
    <label>RICO Referral</label>
    <referenceTo>RICOReferral__c</referenceTo>
    <relationshipLabel>RICO / Violations &amp; Allegations</relationshipLabel>
    <relationshipName>RICO_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>