force-app/main/default/objects/RICOViolation__c/fields/Violation__c.field-meta.xml
<CustomField>
    <fullName>Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The HAR violation.  Only REB Violations are stored in Salesforce.  If you do not see the violation here, then type in the Violation in the Violation Text field below.</inlineHelpText>
    <label>Violation</label>
    <referenceTo>Violation__c</referenceTo>
    <relationshipLabel>RICO / Violations &amp; Allegations</relationshipLabel>
    <relationshipName>RICO_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>