force-app/main/default/objects/RICOViolation__c/fields/ViolationFormula__c.field-meta.xml
<CustomField>
    <fullName>ViolationFormula__c</fullName>
    <formula>IF(
    NOT(
        ISBLANK( Violation__c )
        ),  Violation__r.Name,  ViolationText__c 
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violation Formula</label>
    <type>Text</type>
</CustomField>