force-app/main/default/objects/RICOViolation__c/fields/ViolationText__c.field-meta.xml
<CustomField>
    <fullName>ViolationText__c</fullName>
    <inlineHelpText>Use this text field if the Violation is not listed in the Violation lookup field above.  This text field is used for all areas of PVL except REB.</inlineHelpText>
    <label>Violation Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>